# CodeBuddy-Frame

./: CMakeLists.txt  README.md  cae-pcb-plugin-system_2e7dcde8(未完成).md
adapters/: CMakeLists.txt
adapters/grpc/: CMakeLists.txt
adapters/grpc/include/adapters/grpc/: GrpcAdapter.h
adapters/grpc/proto/: plugin_service.proto
adapters/grpc/src/: GrpcAdapter.cpp  GrpcClient.cpp  PluginServiceImpl.cpp
adapters/python/: CMakeLists.txt
adapters/python/include/adapters/python/: PythonAdapter.h
adapters/python/src/: PythonAdapter.cpp  PythonModule.cpp
app/: CMakeLists.txt
app/grpc_server/: main_grpc.cpp
app/gui/: main_gui.cpp
app/headless/: main_headless.cpp
cmake/: CompilerOptions.cmake  FindQt5.cmake  FindgRPC.cmake  PluginHelpers.cmake
core/: CMakeLists.txt
core/include/core/: ActionContext.h  ActionDispatcher.h  ActionManager.h  IAction.h  IDBEngine.h  IPlugin.h  IPluginManager.h  MenuDescriptor.h  PluginGlobal.h  PluginMeta.h  PluginRegistry.h  RunMode.h
core/src/: ActionDispatcher.cpp  ActionManager.cpp  DynamicLoader.cpp  MenuDescriptor.cpp  PluginManager.cpp  PluginRegistry.cpp
plugins/: CMakeLists.txt
plugins/base_ui/: CMakeLists.txt
plugins/base_ui/include/: BaseUIPlugin.h
plugins/base_ui/src/: BaseUIPlugin.cpp
plugins/pcb_analysis/: CMakeLists.txt
plugins/pcb_analysis/src/: PCBAnalysisPlugin.cpp
plugins/pcb_db/: CMakeLists.txt
plugins/pcb_db/src/: PCBDBPlugin.cpp
tests/: CMakeLists.txt  test_action_manager.cpp  test_dependency_sort.cpp  test_plugin_manager.cpp  test_python_api.py
ui/: CMakeLists.txt
ui/include/ui/: IUIPlugin.h  MainWindow.h  MenuBuilder.h  RibbonBar.h  UIActionBridge.h
ui/src/: MainWindow.cpp  MenuBuilder.cpp  RibbonBar.cpp  UIActionBridge.cpp
