п»ҝcmake_minimum_required(VERSION 3.16)

# йҸҢгғҰеЈҳ GTestй”ӣе ңзҙӯйҚҸе ңеЁҮйҗўг„§йғҙзјҒзҶ·з°ұй”ӣеұҪгҒ‘з’җгғҰжӨӮйҗўвҖөetchContentй”ӣ?find_package(GTest QUIET)

if(NOT GTest_FOUND)
    # жөЈи·Ёж•Ө FetchContent ж¶“е¬ӯжөҮ GTest
    include(FetchContent)
    FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG        v1.14.0
    )
    # з’Ғеү§з–Ҷж¶“иҪ°з¬үжөЈи·Ёж•Өз»ҜиҚӨзІәйҗЁ?GTestй”ӣеұҪе·ұйҚ’жңөз¬…жқһ?    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(googletest)
endif()

enable_testing()

add_executable(cae_tests
    test_action_manager.cpp
    test_dependency_sort.cpp
    test_plugin_manager.cpp
)

target_link_libraries(cae_tests
    PRIVATE
        cae_core
        GTest::gtest
        GTest::gtest_main
)

target_compile_features(cae_tests PRIVATE cxx_std_17)

# еЁүг„Ҙе”Ҫж¶“?CTest еЁҙе¬ӯзҳҜ
include(GoogleTest)
gtest_discover_tests(cae_tests)
